<resources>
    <string name="app_name">I\'m Fine, Mom!</string>
    <string name="title">I\'m Fine,</string>
    <string name="subtitle">MOM!</string>
    <string name="settings">Settings</string>
    <string name="aboutButton">About</string>
    <string name="max_contact_size_reached">Maximum capacity reached !</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_gps_denied">Please enable GPS, and restart</string>
    <string name="permission_access_location_denied">Permission for access location is not allowed.
        Please enable and restart</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">Listener notification</string>
    <string name="progress_bar_loading">Loading&#8230;</string>
    <string name="location_not_found">Location not found, is your gps enabled ?</string>
    <string name="notification_running">Running&#8230;</string>
    <string name="sharing_status">Sharing status&#8230;</string>
    <string name="about_message">About message</string>
    <string name="message_sent">Messages Sent :</string>
    <string name="status">Status :</string>
    <string name="status_on">Sending Location</string>
    <string name="status_off">Off</string>
    <string name="edit">(Tap to change)</string>
    <string name="message_status">Done</string>
    <string name="notification_tap_text">Tap to view message(s)</string>
    <string name="restart_service_message">The Service has been toggled off , since the time
        interval has been changed !</string>
    <string name="settings_title">Settings</string>
    <string name="duplicate_message">Contact already exists !</string>
    <string name="add">Add Someone</string>
    <string name="placeholder_title">Empty</string>
    <string name="no_internet">Oops ! \n\n Please, check your internet connection.</string>
    <string name="placeholder_body">Add someone who cares about you.</string>
    <string name="placeholder_footer">Probably just your mom…</string>
    <string name="not_sending">Tap to select</string>
    <string name="OK">Ok</string>
    <string name="CANCEL">Cancel</string>
</resources>
