<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="UI.Activities.MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="80sp"
        app:fontFamily="@font/moonllime"
        app:layout_constraintBottom_toTopOf="@id/second"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:rotation="-10"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/colorTextSubtitle"
        android:textSize="100sp"
        app:fontFamily="@font/moonllime"
        app:layout_constraintTop_toBottomOf="@+id/first" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            app:fontFamily="@font/oxygen_light"
            android:textColor="@color/colorTextPlaceholder"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/placeholder_title" />

        <androidx.appcompat.widget.AppCompatTextView
            app:fontFamily="@font/oxygen_light"
            android:textColor="@color/colorTextPlaceholder"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|end"
            android:text="@string/placeholder_body" />

        <androidx.appcompat.widget.AppCompatTextView
            app:fontFamily="@font/oxygen_light"
            android:textColor="@color/colorTextPlaceholder"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder_footer" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status_off"
            android:textColor="@color/status_off"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/colorTextFaded"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/commonMargin"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintTop_toBottomOf="@+id/sw" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add"
            style="@style/ActionTextNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            style="@style/ActionTextNormal"
             />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
